Address issue with table overflowing ToC

--- a/assets/css/publication-report.css
+++ b/assets/css/publication-report.css
@@ -65,6 +65,8 @@
 }
 @media (min-width: 1500px) {
   .gwf-publication-report .nv-content-wrap > .wp-block-table.make-wide {
+    position: relative;
+    background-color: white;
     margin-right: calc(50% - 50vw);
     padding-left: 15px;
     padding-right: 15px;
